fixed aligning recipes with a gap in between
now, need to find a way to make it evenly spaced when screen has smaller width

--- a/styles.css
+++ b/styles.css
@@ -145,10 +145,6 @@ body {
 	margin: 0px;
 }
 
-.home-page-content {
-
-}
-
 .search-bar {
     font-family: "Hamburger";
     font-size: 30px;
@@ -173,6 +169,10 @@ body {
     margin-left: 10px; margin-right: 10px;
 
 }
+
+/*******************************
+* Favorites section (homepage) *
+*******************************/
 
 .favorites-text {
     text-align: center;
